--- a/res/values-en/strings.xml
+++ b/res/values-en/strings.xml
@@ -27,7 +27,9 @@
     <string name="btnpa">Pesos Argentinos</string>
     <string name="txta">Anverso</string>
     <string name="txtr">Reverso</string>
-	<string name="real_50_watermark">Put the note near the light and verify in the clearer area an animal and the note value</string>
-	<string name="real_50_description">50 and 100 reais notes have an holographic sash  which has the following effects: A) NOte value number and the "REAIS" word B) The animal changes his colour. C) The leaf (in the 50's notes) and the coral (in 100' notes) reveals differens colours when you move it.</string>
-    
+    <string name="real_50_watermark">Coloque contra la luz y verifique en el área clara la figura de un animal y el número de valor del billete en tonos que varian de claro ao oscuro</string>
+    <string name="real_50_description">Los billetes de 50 y 100 reais tienen una marca holográfica que al moverse puede ver los siguientes efectos: A) El número de valor del billete y la palabra REAIS se alternan B) La figura del animal se vuelve colorida. C) La hoja (en los billetes de 50) y en el coral (billete de 100) aparecen diversos colores en movimiento</string>
+    <string name="real_100_watermark">Coloque contra la luz y verifique en el área clara la figura de un animal y el número de valor del billete en tonos que varian de claro ao oscuro</string>
+    <string name="real_100_description">Los billetes de 50 y 100 reais tienen una marca holográfica que al moverse puede ver los siguientes efectos: A) El número de valor del billete y la palabra REAIS se alternan B) La figura del animal se vuelve colorida. C) La hoja (en los billetes de 50) y en el coral (billete de 100) aparecen diversos colores en movimiento</string>
+
 </resources>
