--- a/res/values-en/strings.xml
+++ b/res/values-en/strings.xml
@@ -27,9 +27,16 @@
     <string name="btnpa">Pesos Argentinos</string>
     <string name="txta">Anverso</string>
     <string name="txtr">Reverso</string>
-    <string name="real_50_watermark">Coloque contra la luz y verifique en el área clara la figura de un animal y el número de valor del billete en tonos que varian de claro ao oscuro</string>
-    <string name="real_50_description">Los billetes de 50 y 100 reais tienen una marca holográfica que al moverse puede ver los siguientes efectos: A) El número de valor del billete y la palabra REAIS se alternan B) La figura del animal se vuelve colorida. C) La hoja (en los billetes de 50) y en el coral (billete de 100) aparecen diversos colores en movimiento</string>
-    <string name="real_100_watermark">Coloque contra la luz y verifique en el área clara la figura de un animal y el número de valor del billete en tonos que varian de claro ao oscuro</string>
-    <string name="real_100_description">Los billetes de 50 y 100 reais tienen una marca holográfica que al moverse puede ver los siguientes efectos: A) El número de valor del billete y la palabra REAIS se alternan B) La figura del animal se vuelve colorida. C) La hoja (en los billetes de 50) y en el coral (billete de 100) aparecen diversos colores en movimiento</string>
+	<string name="real_50_watermark">Put the note near the light and verify in the clearer area an animal and the note value</string>
+	<string name="real_50_description">50 and 100 reais notes have an holographic sash  which has the following effects: A) NOte value number and the "REAIS" word B) The animal changes his colour. C) The leaf (in the 50\'s notes) and the coral (in 100\' notes) reveals differens colours when you move it.</string>
+    <string name="real_100_watermark">Put the note near the light and verify in the clearer area an animal and the note value</string>
+	<string name="real_100_description">50 and 100 reais notes have an holographic sash  which has the following effects: A) NOte value number and the "REAIS" word B) The animal changes his colour. C) The leaf (in the 50\'s notes) and the coral (in 100\' notes) reveals differens colours when you move it.</string>
 
+	
+	<string name="peso_col_10K_watermark">In both sides you can see a disc which turns from green to violet.</string>
+	<string name="peso_col_10K_description">It has a metallic ink which becomes fluorescent green under ultroviolet light. Also you have a security transparent mark where you can read "BRC 10.000" when you see it against the light. Also has touch sensitive printing in the folowing areas: note denomination "Banco de la República" and in the picture</string>	
+	<string name="peso_col_50K_watermark">In both sides you cann see the Jorge Isaacs picture and a fragment from "Maria\'s" novel, when you see the note against the light </string>
+	<string name="peso_col_50K_description">This note has 2 security threads. On the back you can see a dark band. And in the head you will see a thread in five silver segments, when you can see written "50 MIL PESOS COLOMBIA". Also you can read 50 MIL BRC near the down side of the picture. Finally, you should find some touch sensitive printing in some areas </string>
+	
+    
 </resources>
