--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -31,5 +31,11 @@
 	<string name="real_50_description">Los billetes de 50 y 100 reais tienen una marca holográfica que al moverse puede ver los siguientes efectos: A) El número de valor del billete y la palabra REAIS se alternan B) La figura del animal se vuelve colorida. C) La hoja (en los billetes de 50) y en el coral (billete de 100) aparecen diversos colores en movimiento</string>
 	<string name="real_100_watermark">Coloque contra la luz y verifique en el área clara la figura de un animal y el número de valor del billete en tonos que varian de claro ao oscuro</string>
 	<string name="real_100_description">Los billetes de 50 y 100 reais tienen una marca holográfica que al moverse puede ver los siguientes efectos: A) El número de valor del billete y la palabra REAIS se alternan B) La figura del animal se vuelve colorida. C) La hoja (en los billetes de 50) y en el coral (billete de 100) aparecen diversos colores en movimiento</string>
+	
+	<string name="peso_col_10K_watermark">En ambos lados del billete, al ponerlo a trasluz se ve un disco precolombino que cambia de verde a violeta.</string>
+	<string name="peso_col_10K_description">El billete posee una tinta de brillo metálico que se vuelve verde fluo bajo luz ultravioleta. Posee un hilo de seguridad transparente que a trasluz se lee BRC 10.000, e impresión sensible al tacto( en la numeracón del billete tanto numérica como en letras, donde dice Banco de la República y en la imagen)</string>	
+	<string name="peso_col_50K_watermark">En ambos lados del billete, al ponerlo a trasluz se puede observar la imagen del escritor Jorge Isaacs, asi como también un texto que es fragmento de la novela María</string>
+	<string name="peso_col_50K_description">Posee dos hilos de seguridad. En el reverso un hilo opaco que es una banda oscura. En el anverso otro hilo que sobresale en cinco segmentos de color plateado, donde a trasluz se puede ver el texto 50 MIL PESOS COLOMBIA. En el anverso se debe ver el texto 50 MIL BRC frente al retrato en la zona del número inferior de la serie. E impresión con relieve sensible al tacto</string>
+	
 		
 </resources>
