--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -17,6 +17,21 @@
     <string name="btnpa">Pesos Argentinos</string>
     <string name="txta">Anverso</string>
     <string name="txtr">Reverso</string>
+    <string name="Currency">Moeda</string>
+    <string name="Denomination">Denominacao</string>
+    
+    <string name="menuInitUV">Iniciar UV</string>
+    <string name="menucheckWatermark">Marcas de Agua</string>
+    <string name="menuNoteSpec">Especificacion Billetes</string>
+    <string name="menuHelp">Ayuda</string>  
+    <string name="menuRemoveAdds">Remover publicidad</string>    
+    <string name="menuCredits">Créditos</string>    
+    <string name="menuShare">Compartir</string>
+    <string name="securityMeasures">Medidas de seguranca</string>
+    <string name="watermark">Marcas de agua</string>
+    <string name="currency">Moeda</string>
+    <string name="country">País</string>
+    
     <string name="real_50_watermark">Coloque a nota contra a luz e veja, na área clara, a figura do animal e o número de valor da nota em tons que variam do claro ao escuro</string>
     <string name="real_50_description">As notas de 50 e 100 reais tem uma faixa holográfica que ao movemento da misma, você ve nessa faixa os seguintes efeitos: A) O número do valor da nota e a palavra REAIS se alternam B) A figura do animal fica colorida. C) Na folha (nota de 50) ou no coral (nota de 100) aparecem diversas cores em movimento. A movimente a nota</string>
     <string name="real_100_watermark">Coloque a nota contra a luz e veja, na área clara, a figura do animal e o número de valor da nota em tons que variam do claro ao escuro</string>
@@ -26,6 +41,7 @@
 	<string name="peso_col_10K_description">A nota posue uma tinta metálica que torna-se verde fluorescente baixo luz ultravioleta. Alem de isso, há un hilo de segurança transparente que a contra luz pode-se ler BRC 10.000. A última medida e impressao sensível ao tato( na numeraçao da nota, onde diz Banco de la República e na imagen)</string>	
 	<string name="peso_col_50K_watermark">Nas duas faces da nota, a contraluz pódese observar a imagem do escritor Jorge Isaacs, é tambêm um texto fragmento da novela María</string>
 	<string name="peso_col_50K_description">Posue dois hilos de segurança. No reverso uno opaco que é una banda escura. No anverso o outro hilo que têm cinco segmentos de cor prateado, que a contraluz pode-se ler 50 MIL PESOS COLOMBIA. Alem de isso, no anverso debe-se ler o texto 50 MIL BRC embaixo do retrato. A impressao é sensível ao tato</string>
-    
+   	<string name="share_text_dialog">Recem utilicé a apk "Detector de notas falsas". Você Quer verificar se as notas bancarias sao certas? Pode descarregar à apk da playstore de android: </string>
+
 	
 </resources>
