--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,6 +30,18 @@
     <string name="btnpa">Pesos Argentinos</string>
     <string name="txta">Anverso</string>
     <string name="txtr">Reverso</string>
+    <string name="menuInitUV">Init UV</string>
+    <string name="menucheckWatermark">Check watermarks</string>
+    <string name="menuNoteSpec">Note specifications</string>
+    <string name="menuHelp">Help</string>  
+    <string name="menuRemoveAdds">Remove adds</string>    
+    <string name="menuCredits">Credits</string>
+    <string name="menuShare">Share</string>
+    <string name="currency">Currency</string>
+    <string name="country">Country</string>
+    <string name="securityMeasures">Security Measures</string>
+    <string name="watermark">Watermarks</string>
+    
 	<string name="real_50_watermark">Put the note near the light and verify in the clearer area an animal and the note value</string>
 	<string name="real_50_description">50 and 100 reais notes have an holographic sash  which has the following effects: A) NOte value number and the "REAIS" word B) The animal changes his colour. C) The leaf (in the 50\'s notes) and the coral (in 100\' notes) reveals differens colours when you move it.</string>
     <string name="real_100_watermark">Put the note near the light and verify in the clearer area an animal and the note value</string>
@@ -41,5 +53,7 @@
 	<string name="peso_col_50K_watermark">In both sides you cann see the Jorge Isaacs picture and a fragment from "Maria\'s" novel, when you see the note against the light </string>
 	<string name="peso_col_50K_description">This note has 2 security threads. On the back you can see a dark band. And in the head you will see a thread in five silver segments, when you can see written "50 MIL PESOS COLOMBIA". Also you can read 50 MIL BRC near the down side of the picture. Finally, you should find some touch sensitive printing in some areas </string>
 	
+	<string name="share_text_dialog">I have just the Money Detector. Do you want to verify your notes? You can download this amazing app from the android playstore: </string>
+	<string name="andrioid_playstore_url">https://play.google.com/store/apps/details?id=com.appsimple.DetectorBilleteFalso2</string>
     
 </resources>
