--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -27,10 +27,10 @@
     <string name="menuRemoveAdds">Remover publicidad</string>    
     <string name="menuCredits">Créditos</string>    
     <string name="menuShare">Compartir</string>
-    <string name="securityMeasures">Medidas de seguranca</string>
-    <string name="watermark">Marcas de agua</string>
-    <string name="currency">Moeda</string>
-    <string name="country">País</string>
+    <string name="securityMeasures"><b>Medidas de seguranca</b></string>
+    <string name="watermark"><b>Marcas de agua</b></string>
+    <string name="currency"><b>Moeda</b></string>
+    <string name="country"><b>País</b></string>
     
     <string name="real_50_watermark">Coloque a nota contra a luz e veja, na área clara, a figura do animal e o número de valor da nota em tons que variam do claro ao escuro</string>
     <string name="real_50_description">As notas de 50 e 100 reais tem uma faixa holográfica que ao movemento da misma, você ve nessa faixa os seguintes efeitos: A) O número do valor da nota e a palavra REAIS se alternam B) A figura do animal fica colorida. C) Na folha (nota de 50) ou no coral (nota de 100) aparecem diversas cores em movimento. A movimente a nota</string>
