--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -41,7 +41,7 @@
 	<string name="peso_col_10K_description">A nota posue uma tinta metálica que torna-se verde fluorescente baixo luz ultravioleta. Alem de isso, há un hilo de segurança transparente que a contra luz pode-se ler BRC 10.000. A última medida e impressao sensível ao tato( na numeraçao da nota, onde diz Banco de la República e na imagen)</string>	
 	<string name="peso_col_50K_watermark">Nas duas faces da nota, a contraluz pódese observar a imagem do escritor Jorge Isaacs, é tambêm um texto fragmento da novela María</string>
 	<string name="peso_col_50K_description">Posue dois hilos de segurança. No reverso uno opaco que é una banda escura. No anverso o outro hilo que têm cinco segmentos de cor prateado, que a contraluz pode-se ler 50 MIL PESOS COLOMBIA. Alem de isso, no anverso debe-se ler o texto 50 MIL BRC embaixo do retrato. A impressao é sensível ao tato</string>
-   	<string name="share_text_dialog">Recem utilicé a apk "Detector de notas falsas". Você Quer verificar se as notas bancarias sao certas? Pode descarregar à apk da playstore de android: </string>
+   	<string name="share_text_dialog">Recem utilicé a apk "Detector de notas falsas". Você Quer verificar se as notas bancarias sao certas?  </string>
 	<string name="denomination_generic"> Todos</string>
 	
 </resources>
